fixed layout issues

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -24,13 +24,13 @@
 }
 
 /* buttons */
-.buttons {
+.left {
 	width: 25.5%;
 	height: 710px;
 	position: relative;
 }
 
-.buttons div {
+.left div {
 	height: 70px;
 	width: 300px;
 	text-align: center;
@@ -63,7 +63,7 @@ button {
 	font-size: 10px;
 }
 
-.buttons button:hover {
+button:hover {
 	border:0.5px solid #FFFFFF;
 	background-color:#000000;
 	font-size: 10px;
@@ -94,22 +94,20 @@ button {
 	width: 150px;
 }
 
-#saveButton {
-	height: 50px;
-	width: 300px;
-	background-color: #F08080;
-}
-
-#saveButton:hover {
-	background-color: red;
-}
-
 /* Drawing screen */
+
+.center {
+	height: 706.5px;
+	width:49%;
+	position: relative;
+	margin: auto;
+}
+
 .border {
 	position: relative;
 	margin: auto;
 	height: 706.5px;
-	width: 49%;
+	width: 706.5px;
 
 	background-color: #A9A9A9;
 }
@@ -135,8 +133,18 @@ button:focus {
 }
 
 /* Download screen */
-.save {
+.right {
 	width: 25.5%;
 	height: 710px;
 	position: relative;
+}
+
+#saveButton {
+	height: 50px;
+	width: 300px;
+	background-color: #F08080;
+}
+
+#saveButton:hover {
+	background-color: red;
 }
